fixed navbar spacing, added button

--- a/style/globals.css
+++ b/style/globals.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgb(240, 240, 240);
+    background-color: #fafafa;
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
