--- a/style/styles.css
+++ b/style/styles.css
@@ -6,7 +6,7 @@
     border-style: none none solid none;
     border-width: 0.03rem;
     background-color: white;
-    border-color: rgba(176, 176, 176, 0.64);
+    border-color: #dbdbdb;
     position: fixed;
     z-index: 5;
 }
@@ -65,16 +65,17 @@
     position: absolute;
     font-weight: 400;
     font-size: 12px;
+    color: #979797;
+    z-index: 6;
 }
 
 .search-bar input{
     width: 215px;
     height: 28px;
-    background-color: rgba(240, 240, 240, 0.3);
-    border-color: rgba(189, 189, 189, 0.47);
+    background-color: #fafafa;
+    border-color: #dbdbdb;
     border-radius: 3px;
     position: absolute;
-    color: #979797;
 }
 
 .search-bar input, .stories-container, .posts-container {
@@ -84,7 +85,7 @@
 
 .stories-container, .posts-container {
     background-color: white;
-    border-color: rgba(176, 176, 176, 0.64);
+    border-color: #dbdbdb;
     border-radius: 3px;
 }
 
@@ -97,6 +98,17 @@
     overflow: hidden;
     list-style: none;
     margin: 0;
+    position: relative;
+}
+
+.stories-container ion-icon {
+    border-radius: 28px;
+    font-size: 26px;
+    position: absolute;
+    z-index: 4;
+    right: 9px;
+    filter: drop-shadow(0 1px 1px gray);
+    color: #ffffff;
 }
 
 .story {
@@ -106,6 +118,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-right: 14px;
 }
 
 .story-image {
